[project]
name = "fastapi_starlette_demo"
version = "0.1.0"
description = "FastAPI Starlette Demo"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]